# flare

./: LICENSE  README.md  pyproject.toml
flare/: __init__.py  animation.py  charsets.py  core.py  groups.py  image.py  shapes.py  threed.py
flare/studio/: __init__.py  camera.py  easing.py  objects.py  studio.py  track.py
flare_gfx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mnt/user-data/outputs/flare_v2/flare/studio/: __init__.py
